--- a/index.html
+++ b/index.html
@@ -15,16 +15,20 @@
     <!-- header -->
     <nav class="main-nav">
       <div class="logo">
-        <img src="./images/Logo.svg">
+        <img src="./images/Logo.svg"> 
       </div>
       <ul class="nav-list">
-        <li class="nav-li-items active">Home</li>
+        <li class="nav-li-items active-li active">Home</li>
         <li class="nav-li-items">Testimonials</li>
         <li class="nav-li-items">Features</li>
         <li class="nav-li-items">Downloads</li>
         <li class="nav-li-items"><a class="btn light" href="#">Contact</a></li>
       </ul>
     </nav>
+    <button class="mobile-nav-btn">
+      <img class="mob-nav-icon open" src="./images/icon-boxes.svg">
+      <img class="mob-nav-icon close" src="./images/icon-cross.svg">
+    </button>
 <!-- hero section -->
     <div class="section-hero">
       <div class="hero-img-box">
